5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4080/executions/1601_1801.log
== TEST (2019-03-29 13:18:37) 
-- CODE:
input("abara"+ )*4
-- ERROR:
File "XXXX", line 1
    input("abara"+ )*4
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 13:24:44) 
-- CODE:
J = input( )
print("ABARA"+ J)*4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print("ABARA"+ J)*4
TypeError: unsupported operand type(s) for *: 'NoneType' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 13:28:37) 
-- CODE:
j = input("palavra" )
g = ("abra")
n = input("numero de repetições" )
print((g+j)*n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print((g+j)*n)
TypeError: can't multiply sequence by non-int of type 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 13:29:49) 
-- CODE:
j = input("palavra ")
g = ("abra")
n = input("rep. " )
print((g+j)*n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print((g+j)*n)
TypeError: can't multiply sequence by non-int of type 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 13:30:38) 
-- CODE:
j = input("palavra ")
g = ("abra")
n = input("rep. " )
print(g+j)
-- OUTPUT:
abralivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 13:38:17) 
-- CODE:
j = input("palavra ")
g = ("abra ")
n = input("rep. " )
p = (g+j)*n
print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    p = (g+j)*n
TypeError: can't multiply sequence by non-int of type 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 15:19:32) 
-- CODE:
j = input("palavra ")
g = ("abra ")
n = input("rep. " )
p = (g+j)*n
print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    p = (g+j)*n
TypeError: can't multiply sequence by non-int of type 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 15:19:32) 
-- CODE:
j = input("palavra ")
g = ("abra ")
n = input("rep. " )
p = (g+j)*n
print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    p = (g+j)*n
TypeError: can't multiply sequence by non-int of type 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 15:19:32) 
-- CODE:
j = input("palavra ")
g = ("abra ")
n = input("rep. " )
p = (g+j)*n
print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    p = (g+j)*n
TypeError: can't multiply sequence by non-int of type 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 15:19:32) 
-- CODE:
j = input("palavra ")
g = ("abra ")
n = input("rep. " )
p = (g+j)*n
print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    p = (g+j)*n
TypeError: can't multiply sequence by non-int of type 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 15:19:32) 
-- CODE:
j = input("palavra ")
g = ("abra ")
n = input("rep. " )
p = (g+j)*n
print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    p = (g+j)*n
TypeError: can't multiply sequence by non-int of type 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 15:19:33) 
-- CODE:
j = input("palavra ")
g = ("abra ")
n = input("rep. " )
p = (g+j)*n
print(p)
-- EXECUTION TIME:
0.161564
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1601/1801/main.py", line 4, in <module>
    p = (g+j)*n
TypeError: can't multiply sequence by non-int of type 'str'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 15:19:39) 
-- CODE:
j = input("palavra ")
g = ("abra ")
n = input("rep. " )
p = (g+j)*n
print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    p = (g+j)*n
TypeError: can't multiply sequence by non-int of type 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 15:25:31) 
-- CODE:
j = input("palavra ")
g = ("abra ")
n = input("rep. " )
p = (g+j)
print(p*n0)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(p*n0)
NameError: name 'n0' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 15:29:47) 
-- CODE:
j = input("palavra ")
g = ("abra ")
n = int(input("rep. " ))
p = (g+j)
print(p*n)
-- OUTPUT:
abra livroabra livroabra livroabra livroabra livroabra livroabra livroabra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 15:30:22) 
-- CODE:
j = input("palavra ")
g = ("abra ")
n = int(input("rep. " ))
p = (g+j)
print(p*n)
-- OUTPUT:
abra livroabra livroabra livroabra livroabra livroabra livroabra livroabra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 15:30:44) 
-- CODE:
j = input("palavra ")
g = ("abra ")
n = int(input("rep. " ))
p = (g+j)
print(p*n)
-- EXECUTION TIME:
0.146135
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
abra livroabra livroabra livroabra livroabra livroabra livroabra livroabra livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
abra carroabra carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
abra caixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 15:31:38) 
-- CODE:
j = input("palavra ")
g = ("abra ")
n = int(input("rep. " ))
print(p+g*n)
-- EXECUTION TIME:
0.115641
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1601/1801/main.py", line 4, in <module>
    print(p+g*n)
NameError: name 'p' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 15:31:41) 
-- CODE:
j = input("palavra ")
g = ("abra ")
n = int(input("rep. " ))
print(p+g*n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(p+g*n)
NameError: name 'p' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 15:33:16) 
-- CODE:
j = input("palavra ")
g = ("abra ")
n = int(input("rep. " ))
print(p+g)*n
-- EXECUTION TIME:
0.211966
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1601/1801/main.py", line 4, in <module>
    print(p+g)*n
NameError: name 'p' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 15:34:26) 
-- CODE:
j = input("palavra ")
g = ("abra ")
n = int(input("rep. " ))
p = (g+j)*n
print(p)
-- EXECUTION TIME:
0.146265
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
abra livroabra livroabra livroabra livroabra livroabra livroabra livroabra livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
abra carroabra carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
abra caixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 15:34:27) 
-- CODE:
j = input("palavra ")
g = ("abra ")
n = int(input("rep. " ))
p = (g+j)*n
print(p)
-- OUTPUT:
abra livroabra livroabra livroabra livroabra livroabra livroabra livroabra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 15:37:21) 
-- CODE:
j = input("palavra ")
g = ("abra ")
n = int(input("rep. " ))
p = g+j+" "
q = p*n
print(p)
-- OUTPUT:
abra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 15:37:38) 
-- CODE:
j = input("palavra ")
g = ("abra ")
n = int(input("rep. " ))
p = g+j+" "
q = p*n
print(q)
-- OUTPUT:
abra livro abra livro abra livro abra livro abra livro abra livro abra livro abra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 15:37:50) 
-- CODE:
j = input("palavra ")
g = ("abra ")
n = int(input("rep. " ))
p = g+j+" "
q = p*n
print(q)
-- EXECUTION TIME:
0.228777
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
abra livro abra livro abra livro abra livro abra livro abra livro abra livro abra livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
abra carro abra carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
abra caixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 15:38:11) 
-- CODE:
j = input("palavra ")
g = ("abra ")
n = int(input("rep. " ))
p = g+j
q = p*n
print(q)
-- EXECUTION TIME:
0.215106
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
abra livroabra livroabra livroabra livroabra livroabra livroabra livroabra livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
abra carroabra carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
abra caixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 15:38:12) 
-- CODE:
j = input("palavra ")
g = ("abra ")
n = int(input("rep. " ))
p = g+j
q = p*n
print(q)
-- OUTPUT:
abra livroabra livroabra livroabra livroabra livroabra livroabra livroabra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 15:40:56) 
-- CODE:
j = input("palavra ")
g = ("abra ")
n = int(input("rep. " ))
p = g+j+" "
q = p*n
print(q)
-- EXECUTION TIME:
0.128775
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
abra livro abra livro abra livro abra livro abra livro abra livro abra livro abra livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
abra carro abra carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
abra caixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 15:41:31) 
-- CODE:
j = input("palavra ")
g = ("abra ")
n = int(input("rep. " ))
p = g+j+ " "
q = p*n
print(q)
-- EXECUTION TIME:
0.1526
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
abra livro abra livro abra livro abra livro abra livro abra livro abra livro abra livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
abra carro abra carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
palavra rep. abra caixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 15:43:29) 
-- CODE:
j = input("palavra ")
n = int(input("rep. " ))
g = "abra "
p = g+j+" "
q = n*p
print(q)
-- EXECUTION TIME:
0.140556
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
abra livro abra livro abra livro abra livro abra livro abra livro abra livro abra livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
abra carro abra carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
abra caixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 15:47:28) 
-- CODE:
a = input("objeto: ")
b = int(input("n. repetições: "))
c = "Abra "
pv = c + a + " "
fc = b * pv
print(fc)

-- OUTPUT:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 15:47:52) 
-- CODE:
a = input("objeto: ")
b = int(input("repetições: "))
c = "Abra "
pv = c + a + " "
fc = b * pv
print(fc)

-- OUTPUT:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 15:48:22) 
-- CODE:
a = input("objeto: ")
b = int(input("reticoes: "))
c = "Abra "
pv = c + a + " "
fc = b * pv
print(fc)

-- OUTPUT:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 15:48:34) 
-- CODE:
a = input("objeto: ")
b = int(input("reticoes: "))
c = "Abra "
pv = c + a + " "
fc = b * pv
print(fc)

-- EXECUTION TIME:
0.1615
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abra carro Abra carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abra caixa
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
